# vk-oc-projet05-deploiml

./: .dockerignore  .gitignore  Dockerfile.hf  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml
app/: main.py
app/api/: auth.py  routes.py
app/core/: config.py  deps.py  security.py
app/db/: database.py  database_neon.py  repository.py  schema.puml
app/ml/: feature_builder.py  predict_pipeline.py
app/schemas/: request.py  response.py
docker/: Dockerfile
docs/: git-convention.md  git_branches.txt  git_history.txt  git_tags.txt
models/: feature_schema.json  metadata.json  model.pkl  threshold.json
scripts/: generation_hash_api.py  generation_waterfall.py  test_feature_builder.py  test_predict.py  test_waterfall.py
scripts/db/: create_db.py  create_tables.py  create_tables_neon.py  insert_employees.py  insert_employees_neon.py  reset_all_tables.py  reset_all_tables_neon.py
tests/: conftest.py  test_auth.py  test_feature_builder.py  test_main.py  test_predict_api.py  test_predict_api_errors.py  test_predict_pipeline.py  test_repository.py  test_routes.py  test_validation_errors.py
